--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "history": "^4.7.2",
     "material-ui": "^0.19.4",
     "prop-types": "^15.6.0",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dnd": "^2.5.3",
     "react-dnd-html5-backend": "^2.5.3",
     "react-dom": "^15.6.1",
